Ai baits for capitals, assembly buildings and such, adjusted production buildings, adjusted ai budgets to allow upgrading of habitats, sidereal arcologies and re engineering.

--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -19676,3 +19676,82 @@
  mod_decisions_ecu_all_research_cost_add: "$mod_decisions_ecu_all_research_cost_mult$"
  mod_decisions_ecu_all_industrial_cost_add: "$mod_decisions_ecu_all_industrial_cost_mult$"
  mod_decisions_ecu_all_basic_cost_add: "$mod_decisions_ecu_all_basic_cost_mult$"
+
+
+ mod_planet_district_tec_hab_arcology_industry_build_speed_mult: "$district_tec_hab_arcology_industry$ Build Speed"
+ mod_district_tec_hab_arcology_industry_max: "$district_tec_hab_arcology_industry$ Max"
+
+ mod_planet_district_tec_hab_arcology_maintenance_build_speed_mult: "$district_tec_hab_arcology_maintenance$ Build Speed"
+ mod_district_tec_hab_arcology_maintenance_max: "$district_tec_hab_arcology_maintenance$ Max"
+
+ mod_planet_district_tec_hab_arcology_leisure_build_speed_mult: "$district_tec_hab_arcology_leisure$ Build Speed"
+ mod_district_tec_hab_arcology_leisure_max: "$district_tec_hab_arcology_leisure$ Max"
+
+ mod_planet_district_tec_hab_arcology_trade_build_speed_mult: "$district_tec_hab_arcology_trade$ Build Speed"
+ mod_district_tec_hab_arcology_trade_max: "$district_tec_hab_arcology_trade$ Max"
+
+ mod_planet_district_tec_hab_arcology_research_build_speed_mult: "$district_tec_hab_arcology_research$ Build Speed"
+ mod_district_tec_hab_arcology_research_max: "$district_tec_hab_arcology_research$ Max"
+
+ mod_planet_building_stronghold_build_speed_mult: "$building_stronghold$ Build Speed"
+ mod_building_stronghold_max: "$building_stronghold$ Max"
+
+ mod_planet_building_tec_dread_stronghold_build_speed_mult: "$building_tec_dread_stronghold$ Build Speed"
+ mod_building_tec_dread_stronghold_max: "$building_tec_dread_stronghold$ Max"
+
+ mod_planet_building_tec_naval_academy_build_speed_mult: "$building_tec_naval_academy$ Build Speed"
+ mod_building_tec_naval_academy_max: "$building_tec_naval_academy$ Max"
+
+ mod_planet_building_tec_naval_gestalt_build_speed_mult: "$building_tec_naval_gestalt$ Build Speed"
+ mod_building_tec_naval_gestalt_max: "$building_tec_naval_gestalt$ Max"
+
+ mod_planet_district_tec_hab_arcology_foundry_build_speed_mult: "$district_tec_hab_arcology_foundry$ Build Speed"
+ mod_district_tec_hab_arcology_foundry_max: "$district_tec_hab_arcology_foundry$ Max"
+
+ mod_planet_district_generator_uncapped_build_speed_mult: "$district_generator_uncapped$ Build Speed"
+ mod_district_generator_uncapped_max: "$district_generator_uncapped$ Max"
+
+ mod_planet_district_tec_aqua_generator_build_speed_mult: "$district_tec_aqua_generator$ Build Speed"
+ mod_district_tec_aqua_generator_max: "$district_tec_aqua_generator$ Max"
+
+ mod_planet_district_tec_decadent_generator_build_speed_mult: "$district_tec_decadent_generator$ Build Speed"
+ mod_district_tec_decadent_generator_max: "$district_tec_decadent_generator$ Max"
+
+ mod_planet_district_tec_eco_generator_build_speed_mult: "$district_tec_eco_generator$ Build Speed"
+ mod_district_tec_eco_generator_max: "$district_tec_eco_generator$ Max"
+
+ mod_planet_district_tec_eco_aqua_generator_build_speed_mult: "$district_tec_eco_aqua_generator$ Build Speed"
+ mod_district_tec_eco_aqua_generator_max: "$district_tec_eco_aqua_generator$ Max"
+
+ mod_planet_district_mining_uncapped_build_speed_mult: "$district_mining_uncapped$ Build Speed"
+ mod_district_mining_uncapped_max: "$district_mining_uncapped$ Max"
+
+ mod_planet_district_tec_aqua_mining_build_speed_mult: "$district_tec_aqua_mining$ Build Speed"
+ mod_district_tec_aqua_mining_max: "$district_tec_aqua_mining$ Max"
+
+ mod_planet_district_tec_decadent_mining_build_speed_mult: "$district_tec_decadent_mining$ Build Speed"
+ mod_district_tec_decadent_mining_max: "$district_tec_decadent_mining$ Max"
+
+ mod_planet_district_tec_eco_mining_build_speed_mult: "$district_tec_eco_mining$ Build Speed"
+ mod_district_tec_eco_mining_max: "$district_tec_eco_mining$ Max"
+
+ mod_planet_district_tec_eco_aqua_mining_build_speed_mult: "$district_tec_eco_aqua_mining$ Build Speed"
+ mod_district_tec_eco_aqua_mining_max: "$district_tec_eco_aqua_mining$ Max"
+
+ mod_planet_district_farming_uncapped_build_speed_mult: "$district_farming_uncapped$ Build Speed"
+ mod_district_farming_uncapped_max: "$district_farming_uncapped$ Max"
+
+ mod_planet_district_tec_aqua_farming_build_speed_mult: "$district_tec_aqua_farming$ Build Speed"
+ mod_district_tec_aqua_farming_max: "$district_tec_aqua_farming$ Max"
+
+ mod_planet_district_tec_decadent_farming_build_speed_mult: "$district_tec_decadent_farming$ Build Speed"
+ mod_district_tec_decadent_farming_max: "$district_tec_decadent_farming$ Max"
+
+ mod_planet_district_tec_eco_farming_build_speed_mult: "$district_tec_eco_farming$ Build Speed"
+ mod_district_tec_eco_farming_max: "$district_tec_eco_farming$ Max"
+
+ mod_planet_district_tec_eco_aqua_farming_build_speed_mult: "$district_tec_eco_aqua_farming$ Build Speed"
+ mod_district_tec_eco_aqua_farming_max: "$district_tec_eco_aqua_farming$ Max"
+
+ mod_planet_district_tec_arcology_research_build_speed_mult: "$district_tec_arcology_research$ Build Speed"
+ mod_district_tec_arcology_research_max: "$district_tec_arcology_research$ Max"
