--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -37,7 +37,8 @@
 	#					> archaeo_unit
 	#			[ ] - Scripted effects
 	#			[ ] - Start of the game effects - REVIEW AND REESTRUCTURE ALL
-
+	# [ ] Evolved Content
+	#			[ ]	- Check mechadendrite
 
 # [ ] ------------------------------------------------- Machine rework
  # --------------- Civics
