--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -19,7 +19,7 @@
 	#			[ ] - check has_research_job
 	#			[?] - check deposits (specifically 01_blocker_deposits.txt )
 	#					> NOTE: Recheck
-	#			[ ] - Adjust district_crashed_slaver_ship and etcç
+	#			[ ] - Adjust district_crashed_slaver_ship and etc
 	#			[ ] - Adjust building_xeno_zoo
 	#			[ ] - Check district_industrial for origin_fear_of_the_dark (industrial job conditions)
 	#			[ ] - New civic ai weights
@@ -37,8 +37,29 @@
 	#					> archaeo_unit
 	#			[ ] - Scripted effects
 	#			[ ] - Start of the game effects - REVIEW AND REESTRUCTURE ALL
+	#			[X] - Events
+	#					> ancient_relics_arcsite_events_1.txt
+	#						- ancrel.2056 create country - adapt to evolved
+	#					> ancient_relics_arcsite_events_2.txt
+	#						- ancrel.12090 create country - adapt to evolved
+	#					> action.22
+	#						- Check new purge types
+	#					> action.39
+	#						- Check new personalities
+	#					> action.48
+	#						- Add new 
+	#					> action.229
+	#						- Check set_origin_effect effect
+	#					> !!_origin_events_3
+	#						- Added tree of life events as a reminder we need to change them
+
+	#			[X] - Interface changes
+	#			[X] - Prescripted Countries
 	# [ ] Evolved Content
 	#			[ ]	- Check mechadendrite
+	#			[ ] - Redo ascension scripted effects tec_create_latent_psionic_species etc
+	#			[ ]	- Add psychic trait to the psionic mutuals
+
 
 # [ ] ------------------------------------------------- Machine rework
  # --------------- Civics
@@ -263,6 +284,20 @@
 	trait_tec_twin_growth:0 "Dual Gametoids"
 	trait_tec_twin_growth_desc:0 "§LTO DO§!"
 	TRAIT_TEC_TWIN_GROWTH_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
+
+	trait_tec_positive_thoughts:0 "Positive Thinking"
+	trait_tec_positive_thoughts_desc:0 "§LThis species is able to find a light amongst an infinite empty void, and a song amongst a cascade of emptiness, always keeping positivity abroad.§!"
+	TRAIT_TEC_POSITIVE_THOUGHTS_EFFECT:0 "Can gain §GBonus§! Happiness whenever something §YPositive§! happens to the empire"
+
+	trait_tec_negative_thoughts:0 "Pessimistic"
+	trait_tec_negative_thoughts_desc:0 "§LThis species is prone to negative, pessimistic and nihilistic thoughts.§!"
+	TRAIT_TEC_NEGATIVE_THOUGHTS_EFFECT:0 "Can suffer §RReduced§! Happiness whenever something §YNegative§! happens to the empire"
+
+	trait_tec_indulgent:0 "Indulgent"
+	trait_tec_indulgent_desc:0 "§LWhen it comes to creating, moving and spending cash, this species rocks! Excessive purchases, strict advertisement follow-ups and dexterity when buying whatever they need, or not.§!"
+
+	trait_tec_austere:0 "Austere"
+	trait_tec_austere_desc:0 "§LAdapted to a simple life, this species try to avoid wasting any excess of income, living with the minimal amount possible.§!"
  # /
 
  # --------------- Robotic
