--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -298,8 +298,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  TRAIT_TEC_OG_SENSIBLE_EFFECT:0 "§Ya.§!"
 
 # Regular
- trait_tec_austere:0 "Austere"
- trait_tec_austere_desc:0 "§LWhen it comes to pleasure, luxuries or general use of entertainment or generally impractical elements, this species opt for a more spartan and austere environment.§!"
+ trait_tec_vigorous:0 "Vigorous"
+ trait_tec_vigorous_desc:0 "§LWhen it comes to existing, this species can adapt themselves to either favorable or spartan environments, with minimal maintenance, while enduring physically and mentally situations where others would fail.§!"
  trait_tec_delicate:0 "Delicate"
  trait_tec_delicate_desc:0 "§LThe strange and fragile physio and psychology of this species makes them extremely dependant of external use of luxuries or extra basic necessities covered by regular maintenance.§!"
 
