more 3.7 content + graphical items

--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -129,25 +129,25 @@
 	#New - processcap
 	civic_tec_machine_signal_cluster:0 "Signal Cluster"
 	civic_tec_machine_signal_cluster_desc:0 "Experts at iterating their processing signal and transmission relays, this machine consciousness develop several measures to create a more than stable and streamlined process of communication, mainly controlled by drones developed for this task."
-	civic_tooltip_tec_machine_signal_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_signal_drone£ §Y$job_tec_signal_drone_plural$§!.\n- $job_tec_metacreator_drone_effect_desc$\n\n£sr_tec_machine_processing£ §YProcessing Capacity§! Jobs boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tooltip_tec_machine_signal_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_signal_drone£ §Y$job_tec_signal_drone_plural$§!.\n- $job_tec_metacreator_drone_effect_desc$\n\n£sr_tec_machine_processing_empire£ §YProcessing Capacity§! Jobs boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
  # /
 
  # --------------- Mechanic
-	sr_tec_machine_processing:0 "Processing Capacity"
-	sr_tec_machine_processing_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and depured, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
+	sr_tec_machine_processing_empire:0 "Processing Capacity"
+	sr_tec_machine_processing_empire_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and depured, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
 
-	sr_tec_machine_redirection:0 "Redirected Processing"
-	sr_tec_machine_redirection_desc:0 "Several protocols have been redirected to empower the planet processing relays, providing specifically charged packets of processing capacity, increasing the output at a local scale."
+	sr_tec_machine_processing_empire_redirection:0 "Redirected Processing"
+	sr_tec_machine_processing_empire_redirection_desc:0 "Several protocols have been redirected to empower the planet processing relays, providing specifically charged packets of processing capacity, increasing the output at a local scale."
 
 	building_tec_machine_intranetwork:0 "Intra-Network Core"
 	building_tec_machine_intranetwork_desc:0 "TO DO."
-	building_tec_machine_intranetwork_effect:0 "This £building£ serves as a repeater for the planet £sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§!, exporting its production overflow to the §HCollective§! as a £strategic£ §YUsable resource§! via policies and edicts"
+	building_tec_machine_intranetwork_effect:0 "This £building£ serves as a repeater for the planet £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!, exporting its production overflow to the §HCollective§! as a £strategic£ §YUsable resource§! via policies and edicts"
 
 	building_tec_machine_exonetwork:0 "Exo-Network Core"
 	building_tec_machine_exonetwork_desc:0 "TO DO."
-	building_tec_machine_exonetwork_effect:0 "This £building£ serves as a conduit for the planet £sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§!, converting it into £sr_tec_machine_redirection£ §Y$sr_tec_machine_redirection$§!, boosting local £pop£ §HDrone§! and £engineering£ §HAutomation§! §YOutput§!"
+	building_tec_machine_exonetwork_effect:0 "This £building£ serves as a conduit for the planet £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!, converting it into £sr_tec_machine_processing_empire_redirection£ §Y$sr_tec_machine_processing_empire_redirection$§!, boosting local £pop£ §HDrone§! and £engineering£ §HAutomation§! §YOutput§!"
 
-	building_tec_machine_processcap_effect:0 "£sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§! is a special modifier drones consume for effectivity - excess processing capacity can be redirected to other colonies, self-redirected to the planet or to the collective as an usable resource"
+	building_tec_machine_processcap_effect:0 "£sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§! is a special modifier drones consume for effectivity - excess processing capacity can be redirected to other colonies, self-redirected to the planet or to the collective as an usable resource"
 	building_tec_machine_processcap_1:0 "Processing Server"
 	building_tec_machine_processcap_1_desc:0 "A specific installation dedicated to receive, handle, denoise and propagate processing signals from the collective."
 	building_tec_machine_processcap_1:0 "Processing Relay"
@@ -158,7 +158,7 @@
 	job_tec_processcap_drone:0 "Decoder" #Data-Cleanser - depurator
 	job_tec_processcap_drone_plural:0 "Decoders"
 	job_tec_processcap_drone_desc:0 "The sole purpose of these drones is capt, redirect and amplify the machine consciousness signal, separating properly orders, commands and calculations, amplifying the overall processing capacity applied to each unit and asset at a local or global scale."
-	job_tec_processcap_drone_effect_desc:0 "£job_tec_processcap_drone£ $job_tec_processcap_drone_plural$ consume £energy£ §YEnergy§! to generate £sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§!."
+	job_tec_processcap_drone_effect_desc:0 "£job_tec_processcap_drone£ $job_tec_processcap_drone_plural$ consume £energy£ §YEnergy§! to generate £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!."
 	mod_job_tec_processcap_drone_add:0 "$job_tec_processcap_drone$ Jobs"
 	mod_job_tec_processcap_drone_per_pop:0 "§G+1§! £mod_job_tec_processcap_drone_add£ $job_tec_processcap_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_processcap_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_processcap_drone_add£ per $VALUE$ £pop£"
@@ -166,7 +166,7 @@
 	job_tec_prime_drone:0 "Prime Cluster"
 	job_tec_prime_drone_plural:0 "Prime Clusters"
 	job_tec_prime_drone_desc:0 "Highly specialized drones that represents a direct manifestation of the machine consciousness, primarily developed as a balanced way of controlling and amplifying the development of the collective as a whole."
-	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, £amenities_no_happiness£ §YAmenities§! and £sr_tec_machine_processing£ §Y$sr_tec_machine_processing$§!, increased by the $tec_loc_capital_tier$."
+	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, £amenities_no_happiness£ §YAmenities§! and £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!, increased by the $tec_loc_capital_tier$."
 	mod_job_tec_prime_drone_add:0 "$job_tec_prime_drone$ Jobs"
 	mod_job_tec_prime_drone_per_pop:0 "§G+1§! £mod_job_tec_prime_drone_add£ $job_tec_prime_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_prime_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_prime_drone_add£ per $VALUE$ £pop£"
@@ -321,21 +321,21 @@
 	trait_tec_robot_climate_reprocessing_desc:0 "§LTO DO§!"
 	trait_tec_robot_climate_reprocessing_effect:0 "TO DO\n"
 
-	trait_tec_robot_self_processing:0 "Sudo-Ego Depuration"
-	trait_tec_robot_self_processing_desc:0 "§LThese cybernetic units have developed a specific processing capacity retrofit which removes the need of further inputs due to internal redundant signal relays.§!"
-	trait_tec_robot_self_processing_effect:0 "Remove processing capacity usage from pops\nEnergy usage from pops +1\n"
+	trait_tec_machine_self_processing:0 "Sudo-Ego Depuration"
+	trait_tec_machine_self_processing_desc:0 "§LThese cybernetic units have developed a specific processing capacity retrofit which removes the need of further inputs due to internal redundant signal relays.§!"
+	trait_tec_machine_self_processing_effect:0 "Remove processing capacity usage from pops\nEnergy usage from pops +1\n"
 
-	trait_tec_robot_good_processing:0 "Interdependent Depuration"
-	trait_tec_robot_good_processing_desc:0 "§LThis cybernetic species is highly dependant of coordinated processes and signals, leading to discord and confusion in the lack of.§!"
-	trait_tec_robot_good_processing_effect:0 "Pop Processing capacity usage: -15%"
+	trait_tec_machine_good_processing:0 "Interdependent Depuration"
+	trait_tec_machine_good_processing_desc:0 "§LThis cybernetic species is highly dependant of coordinated processes and signals, leading to discord and confusion in the lack of.§!"
+	trait_tec_machine_good_processing_effect:0 "Pop Processing capacity usage: -15%"
 
-	trait_tec_robot_bad_processing:0 "Reiterative Depuration"
-	trait_tec_robot_bad_processing_desc:0 "§LThis cybernetic species has a more lenient dependance of coordinated processes and signals due to a highly efficient depuration of residual waves and peer-to-peer intercommunication of orders.§!"
-	trait_tec_robot_bad_processing_effect:0 "Pop Processing capacity usage: +15%"
+	trait_tec_machine_bad_processing:0 "Reiterative Depuration"
+	trait_tec_machine_bad_processing_desc:0 "§LThis cybernetic species has a more lenient dependance of coordinated processes and signals due to a highly efficient depuration of residual waves and peer-to-peer intercommunication of orders.§!"
+	trait_tec_machine_bad_processing_effect:0 "Pop Processing capacity usage: +15%"
 
-	trait_tec_robot_todo:0 "TO DO"
-	trait_tec_robot_todo_desc:0 "§LTO DO?§!"
-	TRAIT_TEC_ROBOT_todo_EFFECT:0 "TO DO"
+	trait_tec_machine_todo:0 "TO DO"
+	trait_tec_machine_todo_desc:0 "§LTO DO?§!"
+	TRAIT_TEC_MACHINE_todo_EFFECT:0 "TO DO"
  # /
 # /
 
@@ -367,21 +367,30 @@
 	job_tec_mechanitor:0 "Mechanitor"
 	job_tec_mechanitor_plural:0 "Mechanitors"
 	job_tec_mechanitor_desc:0 "Specialized corps dedicated to the task of ensuring automated tasks are done swiftly and efficiently, for improving the colony output."
-	job_tec_mechanitor_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_plural$  turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!, £job_roboticist£ §YRobot Assembly Mult§! and £mod_planet_pop_assembly_organic_mult£ §YRobot Pop Output§!."
-	job_tec_mechanitor_effect_desc_automation:0 "£job_tec_mechanitor£ $job_tec_mechanitor_plural$  turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!, £job_roboticist£ §YRobot Assembly Mult§!, £mod_planet_pop_assembly_organic_mult£ §YRobot Pop Output§! and £job_roboticist£ §YAutomation Output§!."
+	job_tec_mechanitor_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_plural$ turn $tec_loc_consumer_goods$ into §Y$tec_loc_amenities$§!, §Y$tec_loc_robot_assembly_mult$§!, §Y$tec_loc_robot_pop_output$§! and §Y$tec_loc_automation_output$§!."
+	job_tec_mechanitor_effect_desc_cyborg:0 "£job_tec_mechanitor£ $job_tec_mechanitor_plural$ turn $tec_loc_consumer_goods$ into §Y$tec_loc_amenities$§!, §Y$tec_loc_cybernetic_assembly_mult$§!, §Y$tec_loc_cyborg_pop_output$§! and §Y$tec_loc_automation_output$§!."
 	mod_job_tec_mechanitor_add:0 "$job_tec_mechanitor$ Jobs"
 	mod_job_tec_mechanitor_per_pop:0 "§G+1§! $job_tec_mechanitor$ Job per $VALUE$ Pops"
 	mod_job_tec_mechanitor_per_pop_short:0 "\n§G+1§! £job_tec_mechanitor£ per $VALUE$ £pop£"
 
-
 	job_tec_mechanitor_drone:0 "Mechanitor Drone"
 	job_tec_mechanitor_drone_plural:0 "Mechanitor Drones"
 	job_tec_mechanitor_drone_desc:0 "Specialized drones dedicated to the task of ensuring automated tasks are done swiftly and efficiently for the good of the collective."
-	job_tec_mechanitor_drone_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_drone_plural$  turn £energy£ §Y$ENERGY$§! into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, £job_roboticist£ §YRobot Assembly Mult§! and £job_roboticist£ §YRobot Pop Output§!."
-	job_tec_mechanitor_drone_effect_desc_automation:0 "£job_tec_mechanitor£ $job_tec_mechanitor_drone_plural$  turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!, £job_roboticist£ §YRobot Assembly Mult§!, £job_roboticist£ §YRobot Pop Output§! and £job_roboticist£ §YAutomation Output§!."
+	job_tec_mechanitor_drone_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_drone_plural$ turn $tec_loc_basic_resources$ into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_robot_assembly_mult$§!, §Y$tec_loc_robot_pop_output$§! and §Y$tec_loc_automation_output$§!."
+	job_tec_mechanitor_drone_effect_desc_cyborg:0 "£job_tec_mechanitor£ $job_tec_mechanitor_drone_plural$ turn $tec_loc_basic_resources$ into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_cybernetic_assembly_mult$§!, §Y$tec_loc_cyborg_pop_output$§! and §Y$tec_loc_automation_output$§!."
 	mod_job_tec_mechanitor_drone_add:0 "$job_tec_mechanitor_drone$ Jobs"
 	mod_job_tec_mechanitor_drone_per_pop:0 "§G+1§! $job_tec_mechanitor_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_mechanitor_drone_per_pop_short:0 "\n§G+1§! £job_tec_mechanitor£ per $VALUE$ £pop£"
+
+	job_tec_mechanitor_machine:0 "Mechanitor"
+	job_tec_mechanitor_machine_plural:0 "Mechanitors"
+	job_tec_mechanitor_machine_desc:0 "Specialized drones dedicated to the task of ensuring automated tasks are done swiftly and efficiently for the good of the Machine Intelligence."
+	job_tec_mechanitor_machine_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_machine_plural$ turn £energy£ §Y$ENERGY$§! into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_robot_assembly_mult$§!, §Y$tec_loc_robot_pop_output$§! and §Y$tec_loc_automation_output$§!."
+	job_tec_mechanitor_machine_effect_desc_cyborg:0 "£job_tec_mechanitor£ $job_tec_mechanitor_machine_plural$ turn £energy£ §Y$ENERGY$§! into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_cybernetic_assembly_mult$§!, §Y$tec_loc_cyborg_pop_output$§! and §Y$tec_loc_automation_output$§!."
+	mod_job_tec_mechanitor_machine_add:0 "$job_tec_mechanitor_machine$ Jobs"
+	mod_job_tec_mechanitor_machine_per_pop:0 "§G+1§! $job_tec_mechanitor_machine$ Job per $VALUE$ Pops"
+	mod_job_tec_mechanitor_machine_per_pop_short:0 "\n§G+1§! £job_tec_mechanitor£ per $VALUE$ £pop£"
+
  # /
 # /
 
@@ -529,7 +538,7 @@
  # /
 
  #  [X] ------- Mechadendrite assemblers
-	building_tec_mechadendrite_assembler_effect:0 "This £building£ automatically assembles both £job_roboticist£ §YSynthetic§! or £tec_genepoints£ §YOrganic§! pops"
+	building_tec_mechadendrite_assembler_effect:0 "This £building£ automatically assembles both £job_roboticist£ §YSynthetic§! or £tec_genetics_icon£ §YOrganic§! pops"
 
 	building_tec_mechadendrite_assembler_1:0 "Mechadendrite Assembler"
 	building_tec_mechadendrite_assembler_1_desc:0 "These automated installations print any kind of biological or cybernetic body at a unprecedented fast rate, using raw components to generate micro-structures developed into further living and perfected materials and beings."
