--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -887,7 +887,7 @@ tech_reverse_advanced_dome: " "
 
  tec_icon_text_likes_robots:0 "This option is available as the empire §GLikes§! £job_roboticist£ Mechanic or Synthetic technologies and affairs."
  tec_icon_text_likes_psionic:0 "This option is available as the empire §GLikes§! £job_telepath£ Psionic technologies and affairs."
- tec_icon_text_likes_psionic:0 "This option is available as the empire §GLikes§! £tec_genepoints£ Biological technologies and affairs."
+ tec_icon_text_likes_psionic:0 "This option is available as the empire §GLikes§! £tec_genetics_icon£ Biological technologies and affairs."
 
  tec_icon_text_good_relations:0 "This option is available as we have £trigger_yes£ §GGood Relations§! with the empire."
  tec_icon_text_bad_relations:0 "This option is available as we have £trigger_no£ §RBad Relations§! with the empire."
