--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1959,7 +1959,7 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
 
  building_tec_outreach_autofabricator:0 "Autofabricators"
  building_tec_outreach_autofabricator_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
- building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genepoints£ Organic pops"
+ building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genetics_icon£ Organic pops"
 
 
 # ------------------------------------------------- Invention Breakthroughs
