--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -411,7 +411,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # Reduce habitability ceiling - produces exotic gases
  trait_tec_robot_noxious:0 "Toxic Emissions"
  trait_tec_robot_noxious_desc:0 "§LThe internal processors of these robotic units create a dense, noxious and corroding gas as byproduct of energy transference; while safer in low degrees of emission, a high concentration of units creates uninhabitable toxic environments.§!\n"
- TRAIT_TEC_ROBOT_NOXIOUS_EFFECT:1 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§! from Pop: §R-1%§!"
+ TRAIT_TEC_ROBOT_NOXIOUS_EFFECT:1 "£Amenities£ Planet §YAmenities Upkeep§! from Pop: §R0.25%§!"
 
  trait_tec_robot_nuclear:0 "Radiation Scrubbers"
  trait_tec_robot_nuclear_desc:0 "§LWith internal and external equipment to absorb, reprocess and reuse environmental radiation, these units were designed to survive in the harshest condition.§!\n"
@@ -426,14 +426,10 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_robot_personality_desc:0 "§LThese machine units developed a unique personality while being submitted to the collective will, allowing a certain degree of flexibility compared to just bare drones.§!\n"
  TRAIT_TEC_PERSONALITY_EFFECT:0 "a"
 
-
-
 # Origin
  trait_tec_robot_liquid_origin:0 "Arcane Synthetic Dermis"
  trait_tec_robot_liquid_origin_desc:0 "§LThese machine units are made with a really advanced material with a mollecular structure that allows it to ''flow'' and rearrange itself, no matter what damage or instability is caused upon, even when detached at a atomic level.\nReplicating its complexity and strange qualities, and fixing its flaws, is impossible as the knowledge for making such technology is lost in time, but assembly techniques are maintained.§!\n"
  TRAIT_tec_robot_LIQUID_ORIGIN_EFFECT:0 "$mod_planet_pops_robotics_sr_living_metal_upkeep_add$: §R+0.05§!"
-
-
 
 # rare
  trait_tec_machine_biomass:0 "Biomass Converters"
