--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -128,7 +128,7 @@
 # ------------------------------------------------- Outreach
  building_tec_outreach_autofabricator:0 "Autofabricators"
  building_tec_outreach_autofabricator_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
- building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genepoints£ Organic pops"
+ building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genetics_icon£ Organic pops"
 
 # ------------------------------------------------- SR uses - Nanites
  building_tec_nanite_spawner_1:0 "Nano-Germinator"
