--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -46,19 +46,29 @@
 
  # Fake resource locs
  tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
+ tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
  tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
  tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
  tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
 
+ tec_loc_robot_assembly_add: "£job_roboticist£ Robot Assembly"
+ tec_loc_robot_assembly_mult: "£job_roboticist£ Robot Assembly Mult"
  tec_loc_biological_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$"
  tec_loc_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
- 
+ tec_loc_cybernetic_assembly_mult: "£mod_planet_pop_assembly_mult£ Cybernetic Assembly Mult"
 
  tec_loc_industrial_jobs:0 "£job_foundry£ £job_artisan£ Industrial Jobs"
  tec_loc_research_jobs:0 "$mod_base_planet_researchers$"
  tec_loc_unity_jobs:0 "$mod_base_planet_administrators$"
 
  tec_loc_job_output:0 "$mod_planet_jobs_produces_mult$"
+ tec_loc_biological_pop_output:0 "£tec_genetics_icon_icon£ Biological Pop Output"
+ tec_loc_robot_pop_output:0 "£job_roboticist£ Synthetic Pop Output"
+ tec_loc_cyborg_pop_output:0 "£tec_cyborg_icon£ Cyborg Pop Output"
+ tec_loc_cybernetic_pop_output:0 "£tec_cybernetic_icon£ Cybernetic Pop Output"
+ tec_loc_psionic_pop_output:0 "£tec_psionic_icon£ Psionic Pop Output"
+ tec_loc_psychic_pop_output:0 "£tec_psychic_icon£ Psychic Pop Output"
+ tec_loc_automation_output:0 "£job_roboticist£ Automation Output"
 
  tec_loc_habitability:0 "£mod_habitability_floor_add£ Habitability"
  tec_loc_planet_capacity:0 "£mod_planet_carry_cap_add£ $CARRY_CAP$"
